<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.calculatorapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="30sp"
            android:gravity="end"
            android:textColor="#9b0000"
            android:ellipsize="end"/>
        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="30sp"
            android:gravity="end"
            android:textColor="#9b0000"
            android:ellipsize="end"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/numC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/numC"
                android:background="@drawable/round_button"
                android:onClick="Clear"/>

            <Button
                android:id="@+id/numB2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="ButtonClick"
                android:text="@string/numB2" />

            <Button
                android:id="@+id/numB1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="ButtonClick"
                android:text="@string/numB1" />

            <Button
                android:id="@+id/numDiv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="BtnOperatorClick"
                android:text="@string/numDiv" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/num7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="ButtonClick"
                android:text="@string/num7" />

            <Button
                android:id="@+id/num8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="ButtonClick"
                android:text="@string/num8" />

            <Button
                android:id="@+id/num9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="ButtonClick"
                android:text="@string/num9" />

            <Button
                android:id="@+id/numMult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="BtnOperatorClick"
                android:text="@string/numMul" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/num4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="ButtonClick"
                android:text="@string/num4" />

            <Button
                android:id="@+id/num5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="ButtonClick"
                android:text="@string/num5" />

            <Button
                android:id="@+id/num6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="ButtonClick"
                android:text="@string/num6" />

            <Button
                android:id="@+id/numSub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="BtnOperatorClick"
                android:text="@string/numSub" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/num1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="ButtonClick"
                android:text="@string/num1" />

            <Button
                android:id="@+id/num2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="ButtonClick"
                android:text="@string/num2" />

            <Button
                android:id="@+id/num3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="ButtonClick"
                android:text="@string/num3" />

            <Button
                android:id="@+id/numAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="BtnOperatorClick"
                android:text="@string/numAdd" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/num0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="ButtonClick"
                android:text="@string/num0" />

            <Button
                android:id="@+id/numDot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="ButtonClick"
                android:text="@string/numDot" />

            <Button
                android:id="@+id/numDel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="Delete"
                android:text="@string/numDel" />

            <Button
                android:id="@+id/numEqu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="Equals"
                android:text="@string/numEqu" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
